Seminaria overlap fix

--- a/css/seminaria.css
+++ b/css/seminaria.css
@@ -57,6 +57,7 @@
 
 .fb-page {
 	margin: auto;
+	margin-bottom: 10px;
 	width: 100%;
 }
 
